# estimate-matcher

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/apps/catalog/: admin.py  models.py  serializers.py  views.py
backend/apps/catalog/migrations/: 0001_initial.py
backend/apps/estimates/: admin.py  models.py  serializers.py  tasks.py  views.py
backend/apps/estimates/migrations/: 0001_initial.py
backend/apps/estimates/services/: estimate_import.py
backend/apps/imports/: admin.py  apps.py  dtos.py  exceptions.py  models.py  serializers.py  tasks.py  views.py
backend/apps/imports/migrations/: 0001_initial.py
backend/apps/imports/services/: excel_preview.py  excel_reader.py
backend/apps/matching/: admin.py  dtos.py  exceptions.py  models.py  serializers.py  tasks.py  views.py
backend/apps/matching/migrations/: 0001_initial.py
backend/apps/matching/services/: estimate_matching.py  llm_client_factory.py  llm_clients.py  llm_prompt.py  llm_reranker.py  manual_matching.py  text_normalization.py
backend/apps/prices/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
backend/apps/prices/migrations/: 0001_initial.py
backend/apps/prices/services/: price_list_import.py
backend/apps/projects/: admin.py  models.py  serializers.py  views.py
backend/apps/projects/migrations/: 0001_initial.py
backend/apps/rag/: apps.py
backend/apps/suppliers/: admin.py  models.py  serializers.py  views.py
backend/config/: __init__.py  api_router.py  celery.py  env.py  settings.py  urls.py
frontend/src/: main.tsx  (+1 more)
(+25 files in other folders)
