[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["lipkerton <petr.petuxof@yandex.ru>"]
package-mode = false
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.6"
djangorestframework = "^3.17.1"
psycopg = {extras = ["binary"], version = "^3.3.4"}
celery = "^5.6.3"
redis = "^8.0.0"
python-dotenv = "^1.2.2"
drf-spectacular = "^0.29.0"
django-cors-headers = "^4.9.0"
openpyxl = "^3.1.5"
httpx = "^0.28.1"
rapidfuzz = "^3.14.5"
pydantic-settings = "^2.14.2"
xlrd = "^2.0.2"
opensearch-py = "^2.8.0"
langchain-core = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-django = "^4.12.0"
pytest-asyncio = "^1.4.0"
ruff = "^0.15.18"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
